Ultimo Commit Uniendo vista con el código y aplicando listener al boton para enviar un saludo como parte final de esta aplicación.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">a_saludo_desarrollador</string>
+    <string name="app_name">Saludo Desarrollador By JoseCima</string>
 </resources>
